--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           </div>
           <div class="col-lg-4 align-self-center">
             <div class="short_info d-flex justify-content-end align-items-center">
-              <div class="time_date">
-                <p>২৪ নভেম্বর ২০২৩</p>
+              <div class="contact_info">
+                <ul class="list-unstyled">
+                  <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a></li>
+                </ul>
               </div>
               <div class="social">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -87,8 +89,16 @@
               <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
-          <div class="menu_right_option">
-
+          <div class="menu_right_option d-flex align-items-center">
+            <div class="language">
+              <select>
+                <option value="English">English</option>
+                <option value="Bangla">Bangla</option>
+              </select>
+            </div>
+            <div class="login">
+              <a href="login.html">লগইন</a>
+            </div>
           </div>
         </div>
       </div>
@@ -631,9 +641,9 @@
   <footer>
     <div class="footer_top_links">
       <ul class="list-unstyled d-flex justify-content-center">
-        <li><a href="#">Registration</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Refund policy</a></li>
       </ul>
     </div>
     <div class="container">
