--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="menu">
             <ul class="list-unstyled">
-              <li>
+              <li class="active">
                 <a href="#">Home </a>
               </li>
               <li>
