--- a/index.html
+++ b/index.html
@@ -78,15 +78,14 @@
           <div class="menu">
             <ul class="list-unstyled">
               <li class="active">
-                <a href="#">Home </a>
+                <a href="index.html">Home </a>
               </li>
               <li>
-                <a href="#">About Us</a>
+                <a href="about.html">About Us</a>
               </li>
-              <li><a href="#">Match</a></li>
-              <li><a href="#">Search</a></li>
-              <li><a href="#">Package</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="search.html">Search</a></li>
+              <li><a href="package.html">Package</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="menu_right_option d-flex align-items-center">
