--- a/about.html
+++ b/about.html
@@ -24,6 +24,11 @@
 </head>
 
 <body>
+    <!-- Preloader start-->
+    <div id="preloader">
+      <span class="loader"></span>
+    </div>
+    <!-- Preloader end-->
   <!-- header part start -->
   <div id="header-fixed-height"></div>
   <header class="header" id="sticky-header">
