--- a/search.html
+++ b/search.html
@@ -155,7 +155,12 @@
     </div>
     <div class="container">
       <div class="footer_main text-center">
-        <div class="social_icon">
+        <div class="row mt-3">
+          <div class="col-lg-6 mx-auto">
+            <img src="assets/img/pay-with.png" alt="pay-with" class="img-fluid w-100">
+          </div>
+        </div>
+        <div class="social_icon mt-3">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
