--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </ul>
                   </div>
                   <div class="package_btn">
-                    <a href="#">Buy Now</a>
+                    <a href="login.html">Buy Now</a>
                   </div>
                 </div>
               </div>
@@ -263,7 +263,7 @@
                     </ul>
                   </div>
                   <div class="package_btn">
-                    <a href="#">Buy Now</a>
+                    <a href="login.html">Buy Now</a>
                   </div>
                 </div>
               </div>
@@ -287,7 +287,7 @@
                     </ul>
                   </div>
                   <div class="package_btn">
-                    <a href="#">Buy Now</a>
+                    <a href="login.html">Buy Now</a>
                   </div>
                 </div>
               </div>
@@ -311,7 +311,7 @@
                     </ul>
                   </div>
                   <div class="package_btn">
-                    <a href="#">Buy Now</a>
+                    <a href="login.html">Buy Now</a>
                   </div>
                 </div>
               </div>
@@ -335,7 +335,7 @@
                     </ul>
                   </div>
                   <div class="package_btn">
-                    <a href="#">Buy Now</a>
+                    <a href="login.html">Buy Now</a>
                   </div>
                 </div>
               </div>
@@ -358,7 +358,7 @@
               <h2 class="call_action_title">
                 এখানে সম্পুর্ন বিনামুল্যে বায়োডাটা তৈরি করুন
               </h2>
-              <a href="#" class="create_biodata"><i class="fas fa-plus"></i> বায়োডাটা তৈরি করুণ</a>
+              <a href="login.html" class="create_biodata"><i class="fas fa-plus"></i> বায়োডাটা তৈরি করুণ</a>
             </div>
           </div>
         </div>
