add video and how we works section. add phone and email in email address field

--- a/index.html
+++ b/index.html
@@ -365,6 +365,63 @@
       </div>
     </section>
     <!-- call to action part end -->
+    <!-- how we works part start -->
+    <section class="how_we_works">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section_title text-center">
+              <h2 class="title uppercase">How Shongii Works</h2>
+              <div class="image">
+                <img src="assets/img/sectoin_title_image.png" alt="sectoin_title_image" width="60">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="how_we_main">
+          <div class="row">
+            <div class="col-lg-11 mx-auto">
+              <div class="row">
+                <div class="col-lg-4 works_label">
+                  <div class="works_item text-center">
+                    <div class="icon">
+                      <img src="assets/img/pro.png" alt="pro">
+                    </div>
+                    <div class="text">
+                      <h3 class="title">Create Your Profile</h3>
+                      <p>Create your detail profile, add photos and describe your partner preference </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 works_label">
+                  <div class="works_item text-center">
+                    <div class="icon">
+                      <img src="assets/img/ser.png" alt="ser" width="90">
+                    </div>
+                    <div class="text">
+                      <h3 class="title">Search Your Partner</h3>
+                      <p>Search your preferred partner by location, education, interest and so on </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 works_label">
+                  <div class="works_item text-center">
+                    <div class="icon">
+                      <img src="assets/img/mes.png" alt="mes">
+                    </div>
+                    <div class="text">
+                      <h3 class="title">Start Communication</h3>
+                      <p>Start communication with suitable profiles by sending message & emails </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- how we works part end -->
     <!-- we have part start -->
     <section class="we_have">
       <div class="container">
@@ -533,6 +590,56 @@
       </div>
     </section>
     <!-- gallery part end -->
+    <!-- video area start -->
+    <section class="video_gallery">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section_title text-center">
+              <h2 class="title uppercase">Our Recent Video</h2>
+              <div class="image">
+                <img src="assets/img/sectoin_title_image.png" alt="sectoin_title_image" width="60">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="video_gallery_main">
+          <div class="row">
+            <div class="col-lg-4 video_label">
+              <div class="video_item">
+                <img src="assets/img/event-1.png" alt="event-1" class="img-fluid w-100">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                  <div class="icon">
+                    <i class="fa fa-play"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 video_label">
+              <div class="video_item">
+                <img src="assets/img/event-2.png" alt="event-2" class="img-fluid w-100">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                  <div class="icon">
+                    <i class="fa fa-play"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 video_label">
+              <div class="video_item">
+                <img src="assets/img/event-3.png" alt="event-3" class="img-fluid w-100">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                  <div class="icon">
+                    <i class="fa fa-play"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- video area end -->
     <!-- testimonial part start -->
     <section class="testimonial">
       <div class="container">
