--- a/register.html
+++ b/register.html
@@ -124,7 +124,7 @@
           <form action="#">
             <div class="input_groups">
               <label for="#">Full Name <sup class="text-danger">*</sup></label>
-              <input type="email" placeholder="Email address">
+              <input type="email" placeholder="Full Name">
             </div>
             <div class="radio_groups">
               <label for="#">Gender <sup class="text-danger">*</sup></label>
@@ -144,8 +144,8 @@
               </div>
             </div>
             <div class="input_groups">
-              <label for="#">Email Address <sup class="text-danger">*</sup></label>
-              <input type="email" placeholder="Email address">
+              <label for="#">Email or Phone Number <sup class="text-danger">*</sup></label>
+              <input type="text" placeholder="Email or phone number">
               <small class="text-danger mt-1">Email is required</small>
             </div>
             <div class="input_groups">
