--- a/forget.html
+++ b/forget.html
@@ -129,8 +129,8 @@
           </div> -->
           <form action="#">
             <div class="input_groups">
-              <label for="#">Email Address <sup class="text-danger">*</sup></label>
-              <input type="email" placeholder="Email address">
+              <label for="#">Email or phone number <sup class="text-danger">*</sup></label>
+              <input type="email" placeholder="Email or phone number">
             </div>
             
             <div class="button_goups">
