--- a/login.html
+++ b/login.html
@@ -123,8 +123,8 @@
           </div>
           <form action="dashboard.html">
             <div class="input_groups">
-              <label for="#">Email Address <sup class="text-danger">*</sup></label>
-              <input type="email" placeholder="Email address">
+              <label for="#">Email or phone number <sup class="text-danger">*</sup></label>
+              <input type="text" placeholder="Email or phone number">
               <small class="text-danger mt-1">Email is required</small>
             </div>
             <div class="input_groups">
