--- a/search.html
+++ b/search.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-    <!-- Preloader start-->
-    <div id="preloader">
-      <span class="loader"></span>
-    </div>
-    <!-- Preloader end-->
+  <!-- Preloader start-->
+  <div id="preloader">
+    <span class="loader"></span>
+  </div>
+  <!-- Preloader end-->
   <!-- header part start -->
   <div id="header-fixed-height"></div>
   <header class="header" id="sticky-header">
@@ -128,9 +128,138 @@
     <!-- search area start -->
     <section class="advance_search">
       <div class="container">
-        <div class="text-center">
-          <h1 class="mb-4 fs-1 fw-semibold">This page in under construction</h1>
-          <img src="assets/img/gif.gif" alt="">
+        <div class="row">
+          <div class="col-lg-6 align-items-center">
+            <div class="image pe-0">
+              <img src="assets/img/search.jpeg" alt="search" class="img-fluid w-100">
+            </div>
+          </div>
+          <div class="col-lg-6 ps-xl-5 align-items-center">
+            <div class="search_box">
+              <div class="text-center">
+                <h4 class="partner_title">Search your partner</h4>
+              </div>
+              <form action="search-result.html">
+                <div class="row g-3">
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>আমি খুঁজছি</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">ছেলে</option>
+                        <option value="Beijing">মেয়ে</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>বৈবাহিক অবস্থা</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>উচ্চতা</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>বয়স</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>ধর্ম</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>হোম ডিভিশন</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>বিভাগ</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>Country Living In</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>Education</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input_groups">
+                      <label>Profession</label>
+                      <select class="js-select2">
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Beijing">Beijing</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Seoul">Seoul</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="button_field">
+                      <button type="submit">খুজুন <i class="fas fa-search"></i></button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -155,17 +284,27 @@
     </div>
     <div class="container">
       <div class="footer_main text-center">
-        <div class="row mt-3">
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="contact_number d-flex align-items-center me-5">
+            <h4 class="ft_title">Contact us: </h4>
+            <ul class="list-unstyled">
+              <li><a href="tel:+8801319485475">+8801319485475</a></li>
+              <li><a href="tel:+8801998526797">+8801998526797</a></li>
+            </ul>
+
+          </div>
+          <div class="social_icon">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-telegram"></i></a>
+          </div>
+        </div>
+        <div class="row mb-3">
           <div class="col-lg-6 mx-auto">
             <img src="assets/img/pay-with.png" alt="pay-with" class="img-fluid w-100">
           </div>
-        </div>
-        <div class="social_icon mt-3">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-telegram"></i></a>
         </div>
         <p>© All rights reserved &copy; <a href="index.html">Shongii.com</a></p>
       </div>
