--- a/forget.html
+++ b/forget.html
@@ -161,17 +161,27 @@
     </div>
     <div class="container">
       <div class="footer_main text-center">
-        <div class="row mt-3">
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="contact_number d-flex align-items-center me-5">
+            <h4 class="ft_title">Contact us: </h4>
+            <ul class="list-unstyled">
+              <li><a href="tel:+8801319485475">+8801319485475</a></li>
+              <li><a href="tel:+8801998526797">+8801998526797</a></li>
+            </ul>
+
+          </div>
+          <div class="social_icon">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-telegram"></i></a>
+          </div>
+        </div>
+        <div class="row mb-3">
           <div class="col-lg-6 mx-auto">
             <img src="assets/img/pay-with.png" alt="pay-with" class="img-fluid w-100">
           </div>
-        </div>
-        <div class="social_icon mt-3">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-telegram"></i></a>
         </div>
         <p>© All rights reserved &copy; <a href="index.html">Shongii.com</a></p>
       </div>
