some design change

--- a/index.html
+++ b/index.html
@@ -141,7 +141,13 @@
                         <div class="col-lg">
                           <div class="input_groups">
                             <label>আমি খুঁজছি</label>
-                            <select class="js-select2">
+                            <select>
+                              <option value="Tokyo">ছেলে</option>
+                              <option value="Beijing">মেয়ে</option>
+                              <option value="Tokyo">ছেলে</option>
+                              <option value="Beijing">মেয়ে</option>
+                              <option value="Tokyo">ছেলে</option>
+                              <option value="Beijing">মেয়ে</option>
                               <option value="Tokyo">ছেলে</option>
                               <option value="Beijing">মেয়ে</option>
                             </select>
@@ -150,7 +156,11 @@
                         <div class="col-lg">
                           <div class="input_groups">
                             <label>বৈবাহিক অবস্থা</label>
-                            <select class="js-select2">
+                            <select>
+                              <option value="Tokyo">Tokyo</option>
+                              <option value="Beijing">Beijing</option>
+                              <option value="Delhi">Delhi</option>
+                              <option value="Seoul">Seoul</option>
                               <option value="Tokyo">Tokyo</option>
                               <option value="Beijing">Beijing</option>
                               <option value="Delhi">Delhi</option>
@@ -161,7 +171,11 @@
                         <div class="col-lg">
                           <div class="input_groups">
                             <label>বয়স</label>
-                            <select class="js-select2">
+                            <select>
+                              <option value="Tokyo">Tokyo</option>
+                              <option value="Beijing">Beijing</option>
+                              <option value="Delhi">Delhi</option>
+                              <option value="Seoul">Seoul</option>
                               <option value="Tokyo">Tokyo</option>
                               <option value="Beijing">Beijing</option>
                               <option value="Delhi">Delhi</option>
@@ -172,7 +186,11 @@
                         <div class="col-lg">
                           <div class="input_groups">
                             <label>ধর্ম</label>
-                            <select class="js-select2">
+                            <select>
+                              <option value="Tokyo">Tokyo</option>
+                              <option value="Beijing">Beijing</option>
+                              <option value="Delhi">Delhi</option>
+                              <option value="Seoul">Seoul</option>
                               <option value="Tokyo">Tokyo</option>
                               <option value="Beijing">Beijing</option>
                               <option value="Delhi">Delhi</option>
@@ -183,7 +201,11 @@
                         <div class="col-lg">
                           <div class="input_groups">
                             <label>বিভাগ</label>
-                            <select class="js-select2">
+                            <select>
+                              <option value="Tokyo">Tokyo</option>
+                              <option value="Beijing">Beijing</option>
+                              <option value="Delhi">Delhi</option>
+                              <option value="Seoul">Seoul</option>
                               <option value="Tokyo">Tokyo</option>
                               <option value="Beijing">Beijing</option>
                               <option value="Delhi">Delhi</option>
