--- a/search.html
+++ b/search.html
@@ -144,7 +144,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>আমি খুঁজছি</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">ছেলে</option>
                         <option value="Beijing">মেয়ে</option>
                       </select>
@@ -153,7 +153,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>বৈবাহিক অবস্থা</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -164,7 +164,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>উচ্চতা</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -175,7 +175,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>বয়স</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -186,7 +186,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>ধর্ম</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -197,7 +197,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>হোম ডিভিশন</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -208,7 +208,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>বিভাগ</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -219,7 +219,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>Country Living In</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -230,7 +230,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>Education</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
@@ -241,7 +241,7 @@
                   <div class="col-lg-6">
                     <div class="input_groups">
                       <label>Profession</label>
-                      <select class="js-select2">
+                      <select>
                         <option value="Tokyo">Tokyo</option>
                         <option value="Beijing">Beijing</option>
                         <option value="Delhi">Delhi</option>
