--- a/search-result.html
+++ b/search-result.html
@@ -255,28 +255,23 @@
                           <table class="table table-borderless mb-2">
                             <tbody>
                               <tr>
-                                <th style="width: 180px;">Full Name</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 220px;">Full Name</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Rabia Sultana</td>
                               </tr>
                               <tr>
                                 <th>Address</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Dhaka, Gulshan</td>
                               </tr>
                               <tr>
                                 <th>Marital Status</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Unmarried</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
-                        <p class="des">
-                          I completed my Masters from Stamfort university. Currently I am working as a CEO in
-                          Marriage
-                          Match
-                        </p>
                         <a class="view_viodata" href="#">View Viodata</a>
                       </div>
                       <div class="option">
@@ -304,28 +299,23 @@
                           <table class="table table-borderless mb-2">
                             <tbody>
                               <tr>
-                                <th style="width: 180px;">Full Name</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 220px;">Full Name</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Rabia Sultana</td>
                               </tr>
                               <tr>
                                 <th>Address</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Dhaka, Gulshan</td>
                               </tr>
                               <tr>
                                 <th>Marital Status</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Unmarried</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
-                        <p class="des">
-                          I completed my Masters from Stamfort university. Currently I am working as a CEO in
-                          Marriage
-                          Match
-                        </p>
                         <a class="view_viodata" href="#">View Viodata</a>
                       </div>
                       <div class="option">
@@ -353,77 +343,23 @@
                           <table class="table table-borderless mb-2">
                             <tbody>
                               <tr>
-                                <th style="width: 180px;">Full Name</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 220px;">Full Name</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Rabia Sultana</td>
                               </tr>
                               <tr>
                                 <th>Address</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Dhaka, Gulshan</td>
                               </tr>
                               <tr>
                                 <th>Marital Status</th>
-                                <th style="width: 30;">:</th>
+                                <th style="width: 30px;">:</th>
                                 <td>Unmarried</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
-                        <p class="des">
-                          I completed my Masters from Stamfort university. Currently I am working as a CEO in
-                          Marriage
-                          Match
-                        </p>
-                        <a class="view_viodata" href="#">View Viodata</a>
-                      </div>
-                      <div class="option">
-                        <ul class="list-unstyled">
-                          <li><button class="option_list"><i class="fas fa-envelope"></i></button></li>
-                          <li><button class="option_list"><i class="fas fa-comments"></i></button></li>
-                          <li><button class="option_list"><i class="far fa-thumbs-up"></i></button></li>
-                          <li><button class="option_list"><i class="far fa-star"></i></button></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="list_item">
-                    <div class="image">
-                      <img src="assets/img/pr.png" alt="pr" class="img-fluid w-100">
-                    </div>
-                    <div class="info d-flex">
-                      <div class="details">
-                        <h4 class="user_id">
-                          <a class="user_a" href="#"><span>Biodata ID:</span> GBTC7023</a>
-                        </h4>
-                        <div class="table-responsive text-nowrap">
-                          <table class="table table-borderless mb-2">
-                            <tbody>
-                              <tr>
-                                <th style="width: 180px;">Full Name</th>
-                                <th style="width: 30;">:</th>
-                                <td>Rabia Sultana</td>
-                              </tr>
-                              <tr>
-                                <th>Address</th>
-                                <th style="width: 30;">:</th>
-                                <td>Dhaka, Gulshan</td>
-                              </tr>
-                              <tr>
-                                <th>Marital Status</th>
-                                <th style="width: 30;">:</th>
-                                <td>Unmarried</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                        <p class="des">
-                          I completed my Masters from Stamfort university. Currently I am working as a CEO in
-                          Marriage
-                          Match
-                        </p>
                         <a class="view_viodata" href="#">View Viodata</a>
                       </div>
                       <div class="option">
