--- a/favourite-list.html
+++ b/favourite-list.html
@@ -133,7 +133,7 @@
             </div>
             <div class="sidebar_menu">
               <ul class="list-unstyled">
-                <li class="active">
+                <li>
                   <a href="dashboard.html"><i class="fab fa-windows"></i> Dashboard</a>
                 </li>
                 <li>
@@ -142,7 +142,7 @@
                 <li>
                   <a href="inbox.html"><i class="fa fa-comments"></i> Inbox</a>
                 </li>
-                <li>
+                <li class="active">
                   <a href="favourite-list.html"><i class="fas fa-hands-helping"></i> Favourite List</a>
                 </li>
                 <li>
@@ -158,33 +158,80 @@
             </div>
           </div>
           <div class="right_content">
-            <div class="row g-4">
-              <div class="col-lg-6">
-                <div class="info_box">
-                  <h2 class="title">Profiles status</h2>
-                  <div class="profile_info text-center">
-                    <div class="number">
-                      <h2>90 <sub>%</sub></h2>
-                    </div>
-                    <h3>Profile completion</h3>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="info_box">
-                  <h2 class="title">Plan details</h2>
-                  <div class="plan_details text-center">
-                    <div class="image">
-                      <img src="assets/img/plan.png" alt="plan">
-                    </div>
-                    <div class="info">
-                      <p>Plan name: <b>Standard</b></p>
-                      <p>Validity: <b>6 Months</b></p>
-                      <a href="package.html">Upgrande Plan</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div class="favourite_list table-responsive">
+              <table class="table table-bordered table-striped">
+                <thead class="table-dark">
+                  <tr>
+                    <th>Sl No.</th>
+                    <th>Biodata No</th>
+                    <th>Birthyear</th>
+                    <th>Location</th>
+                    <th>Option</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>01</td>
+                    <td>GBTC7023</td>
+                    <td>03/10/2023</td>
+                    <td>Amuakanda Bazar, Phulpur, Mymensingh</td>
+                    <td>
+                      <div class="actions">
+                        <a href="biodata.html" class="view_biodata_btn cmn"><i class="fas fa-link"></i></a>
+                        <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>02</td>
+                    <td>GBTC7023</td>
+                    <td>03/10/2023</td>
+                    <td>Amuakanda Bazar, Phulpur, Mymensingh</td>
+                    <td>
+                      <div class="actions">
+                        <a href="biodata.html" class="view_biodata_btn cmn"><i class="fas fa-link"></i></a>
+                        <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>03</td>
+                    <td>GBTC7023</td>
+                    <td>03/10/2023</td>
+                    <td>Amuakanda Bazar, Phulpur, Mymensingh</td>
+                    <td>
+                      <div class="actions">
+                        <a href="biodata.html" class="view_biodata_btn cmn"><i class="fas fa-link"></i></a>
+                        <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>04</td>
+                    <td>GBTC7023</td>
+                    <td>03/10/2023</td>
+                    <td>Amuakanda Bazar, Phulpur, Mymensingh</td>
+                    <td>
+                      <div class="actions">
+                        <a href="biodata.html" class="view_biodata_btn cmn"><i class="fas fa-link"></i></a>
+                        <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>05</td>
+                    <td>GBTC7023</td>
+                    <td>03/10/2023</td>
+                    <td>Amuakanda Bazar, Phulpur, Mymensingh</td>
+                    <td>
+                      <div class="actions">
+                        <a href="biodata.html" class="view_biodata_btn cmn"><i class="fas fa-link"></i></a>
+                        <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
