--- a/settings.html
+++ b/settings.html
@@ -133,7 +133,7 @@
             </div>
             <div class="sidebar_menu">
               <ul class="list-unstyled">
-                <li class="active">
+                <li>
                   <a href="dashboard.html"><i class="fab fa-windows"></i> Dashboard</a>
                 </li>
                 <li>
@@ -148,7 +148,7 @@
                 <li>
                   <a href="support.html"><i class="fa fa-comment"></i> Support</a>
                 </li>
-                <li>
+                <li class="active">
                   <a href="settings.html"><i class="fas fa-cog fa-spin"></i> Settings</a>
                 </li>
                 <li>
@@ -158,33 +158,25 @@
             </div>
           </div>
           <div class="right_content">
-            <div class="row g-4">
-              <div class="col-lg-6">
-                <div class="info_box">
-                  <h2 class="title">Profiles status</h2>
-                  <div class="profile_info text-center">
-                    <div class="number">
-                      <h2>90 <sub>%</sub></h2>
-                    </div>
-                    <h3>Profile completion</h3>
-                  </div>
+            <div class="settings">
+              <h4 class="title">Change Your Password</h4>
+              <form action="#">
+                <div class="input_groups">
+                  <label>Your Present Password</label>
+                  <input type="text">
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="info_box">
-                  <h2 class="title">Plan details</h2>
-                  <div class="plan_details text-center">
-                    <div class="image">
-                      <img src="assets/img/plan.png" alt="plan">
-                    </div>
-                    <div class="info">
-                      <p>Plan name: <b>Standard</b></p>
-                      <p>Validity: <b>6 Months</b></p>
-                      <a href="package.html">Upgrande Plan</a>
-                    </div>
-                  </div>
+                <div class="input_groups">
+                  <label>New Password</label>
+                  <input type="text">
                 </div>
-              </div>
+                <div class="input_groups">
+                  <label>Confirm New Password</label>
+                  <input type="text">
+                </div>
+                <div class="button_groups">
+                  <button type="submit">Update Password</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
