--- a/inbox.html
+++ b/inbox.html
@@ -158,6 +158,41 @@
             </div>
           </div>
           <div class="right_content">
+            <table class="table table-bordered table-striped">
+              <thead class="table-dark">
+                <tr>
+                  <th>Sl No.</th>
+                  <th>Message</th>
+                  <th>Date</th>
+                  <th>Reply</th>
+                  <th>Delete</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>01</td>
+                  <td>Lorem ipsum dolor sit amet.</td>
+                  <td>03/10/2023</td>
+                  <td><button class="btn btn-success" style="font-size: 14px;">Reply</button></td>
+                  <td>
+                    <div class="actions">
+                      <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>02</td>
+                  <td>Lorem ipsum dolor sit amet.</td>
+                  <td>03/10/2023</td>
+                  <td><button class="btn btn-success" style="font-size: 14px;">Reply</button></td>
+                  <td>
+                    <div class="actions">
+                      <button class="delete_btn cmn"><i class="fa fa-trash-alt"></i></button>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
             <div class="support_">
               <fieldset>
                 <h5 class="sub__header">Inbox</h5>
