--- a/invoice.html
+++ b/invoice.html
@@ -123,10 +123,14 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="invoice-main">
-              <div class="download text-start mb-3">
-                <a class="py-2 shadow btn btn-secondary btn-sm" href="#">
-                  <i class="bi bi-send pe-2"></i>
+              <div class="download text-end mb-3">
+                <a class="py-2 shadow btn btn-success btn-sm" href="#">
+                  <i class="far fa-paper-plane"></i>
                   Pay Now
+                </a>
+                <a class="py-2 ms-2 shadow btn btn-secondary btn-sm" href="#">
+                  <i class="fas fa-print"></i>
+                  Print 
                 </a>
               </div>
               <div class="payment-invoice">
